# playground-series-s4e9

./: .gitignore  Makefile  Makefile.augl1  Makefile.cb1  Makefile.cb2  Makefile.feature.esb1  Makefile.feature.esb2  Makefile.feature.esb3  Makefile.feature.esb4  Makefile.feature.esb5  Makefile.feature.j1  Makefile.feature.j2  Makefile.feature.j3  Makefile.feature.j4  Makefile.feature.j5  Makefile.feature.j6  Makefile.feature.j7  Makefile.lasso1  Makefile.lasso2  Makefile.lgb1  Makefile.lgb2  Makefile.lgb3  Makefile.xgb1  Makefile.xgb2  README.md  create_structure.sh  pyproject.toml
notebook/: 01.examine.ipynb
src/: const.py  data_io.py  evaluate.py  generate_j1.py  generate_j2.py  generate_j3.py  generate_j4.py  generate_j5.py  generate_j6.py  generate_j7.py  metric.py  train_predict_augl1.py  train_predict_cb1.py  train_predict_cb2.py  train_predict_eff1.py  train_predict_lasso1.py  train_predict_lasso2.py  train_predict_lgb1.py  train_predict_lgb2.py  train_predict_lgb3.py  train_predict_xgb1.py  train_predict_xgb2.py
