[tool.poetry]
name = "isic2024"
version = "0.1.0"
description = ""
authors = ["thinhcd <{ID}+{username}@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
lightgbm = "^4.4.0"
xgboost = "^2.1.0"
ipykernel = "^6.29.5"
skimpy = "^0.0.15"
scikit-learn = "^1.5.1"
catboost = "^1.2.5"
category-encoders = "^2.6.3"
kaggle = "^1.6.17"
tensorflow = "^2.17.0"
torch = "^2.4.0"
isic-cli = "^11.0.0"
torchvision = "^0.19.0"
optuna = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
